--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Content of the Basic NodeJS Course of Platzi",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/NathaEEUD/Basic-NodeJS-Platzi/issues"
   },
-  "homepage": "https://github.com/NathaEEUD/Basic-NodeJS-Platzi#readme"
+  "homepage": "https://github.com/NathaEEUD/Basic-NodeJS-Platzi#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "nodemon": "^1.18.9"
+  }
 }
