--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "fill-db": "node ./db/populate --fill",
+    "clear-db": "node ./db/populate --clear"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,8 @@
   "homepage": "https://github.com/NathaEEUD/Basic-NodeJS-Platzi#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "nodemon": "^1.18.9"
+    "mongodb": "^3.1.13",
+    "nodemon": "^1.18.9",
+    "yargs": "^12.0.5"
   }
 }
